# Supernet

./: .gitignore  README.md  setup.cfg  task.md  test.py  train.py
src/configs/: supernet_config.yaml  supernet_config_[1, 1].yaml  supernet_config_[2, 3].yaml
src/datasets/: cifar10.py
src/models/: model.py  model_blocks.py
src/utils/: metrics.py  utils.py
tests/: supernet_dummy.pt  supernet_dummy.pt_[2, 2].yaml  test_model.py
