[metadata]
name = Supernet
version = 1.0
author = Petr Shulzhenko

[options]
package_dir =
    = src
packages = find:
install_requires =
    python >= 3.8
    PyYAML >= 6.0
    torch > 1.10.1
    tqdm == 4.64.1
    torchvision >= 0.8.2
    wandb == 0.15.12

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
   train = src.train:main
